@@ -10,6 +10,7 @@ t/00-load.t
 t/10-new.t
 t/apoc.t
 t/allow.t
+t/bin.t
 t/boiler.t
 t/carp.t
 t/changes.t
