@@ -23,6 +23,7 @@ WriteMakefile(
     BUILD_REQUIRES => {
 	'Test::Most' => 0,
 	'Test::NoWarnings' => 0,
+	'Test::Script' => 0,
 	# 'Test::Kwalitee' => 0,
     },
     PREREQ_PM => {
